--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.restful.booker</groupId>
-  <artifactId>p3-restful-booker-serenity-wk18-kajal</artifactId>
+  <artifactId>p4-wk18-restfulbooker</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>p3-restful-booker-serenity-wk18-kajal</name>
+  <name>p4-wk18-restfulbooker</name>
   <url>http://maven.apache.org</url>
 
   <properties>
